# digital-board

./: .gitignore  Cargo.toml  LICENSE  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/api/: Cargo.toml
apps/api/src/: main.rs  server.rs  session.rs
apps/api/static/: ws_test.html
apps/desktop/: Cargo.toml  tauri.conf.json
apps/miro/: index.html  project.json  tsconfig.json  vite.config.ts
apps/miro-e2e/: cypress.config.ts  project.json
apps/miro-e2e/src/e2e/: app.cy.ts
apps/miro/src/app/: app.spec.tsx  app.tsx
apps/miro/src/app/contexts/: board.ts
apps/web/: index.html  vite.config.ts
apps/web/src/app/: app.tsx
apps/web/src/app/contexts/: board.ts
libs/board/: README.md  jest.config.ts  package.json  project.json  vite.config.ts
libs/board/src/lib/: Board.spec.ts  Board.ts  BoardApplication.spec.ts  BoardApplication.ts  Context.ts  Element.spec.ts  Element.ts  GameObject.ts  InputSystem.ts  PhysicSystem.ts  Rectangle.spec.ts  Rectangle.ts  Transform.spec.ts  Transform.ts  Vector.ts  board.spec.ts  board.ts  index.ts
libs/board/src/lib/elements/: Element.ts  Rectangle.ts  index.ts
libs/board/src/lib/scripts/: PhysicBody.ts  Script.ts  SyncronizeElement.ts  index.ts
libs/board/src/lib/systems/: InputSystem.ts  index.ts  (+3 more)
libs/types/: jest.config.ts  package.json  project.json  vite.config.ts
libs/types/src/lib/: Board.spec.ts  Board.ts  Element.spec.ts  Element.ts  Fill.spec.ts  Fill.ts  Rectangle.spec.ts  Rectangle.ts  Size.spec.ts  Size.ts  Space.ts  Stroke.spec.ts  Stroke.ts  Transform.ts  Vector.ts  index.ts
(+13 files in other folders)
